--- a/assets/main.css
+++ b/assets/main.css
@@ -25,10 +25,18 @@ body {
 }
 
 .header > h1 {
-  font-size: 1.6em;
+  font-size: 1.65em;
   line-height: 1.25em;
   width: 100%;
-  margin: 30px 0;
+  margin: 25px 0;
+  padding: 0;
+}
+
+.header > h2 {
+  font-size: 1.2em;
+  line-height: 1.25em;
+  width: 100%;
+  margin: 20px 0;
   padding: 0;
 }
 
@@ -38,6 +46,10 @@ body {
   margin: 0 0 30px 0;
   padding: 0;
   font-style: italic;
+}
+
+.dropper {
+    padding: 30px;
 }
 
 body.sepia > .container > .header > .domain {
